chore: require minimum jdk 17